change a css class's property to correctly display content on mobile devices

--- a/src/DietaryProfileEditor/DietaryProfileManagement/ProfileOverview/ProfileOverview.css
+++ b/src/DietaryProfileEditor/DietaryProfileManagement/ProfileOverview/ProfileOverview.css
@@ -1,5 +1,5 @@
 .profile-overview-screen {
-  height: 100vh;
+  height: 100dvh;
 }
 
 .profile-overview-head-section {
